<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="yoga.android.vipin.com.vihangamyog.About.Aboutt">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/designedd"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        >
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/gurujii"
        android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developername"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developermobileno"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:text="@string/developermail"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>



</LinearLayout>
