<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0FAFB"
    tools:context="yoga.android.vipin.com.vihangamyog.Initials.Signup">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/textborder"
        android:ems="10"
        android:singleLine="true"
        android:hint="Name"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/textborder"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/textborder"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:hint="@string/mobile"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/textborder"
        android:ems="10"
        android:hint="@string/password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent" />



    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="148dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
